# andre-machava

./: CORRECAO_ESTILOS_CSS.md  CORRECAO_LARGURA_TELA.md  CORRECAO_TEMPLATE_SYNTAX.md  CORRECAO_URL_RH.md  DIAGNOSTICO_FILTROS.md  ESTILO_RH_ORGANIZADO.md  EXEMPLO_MIGRACAO.md  GARANTIA_ABSOLUTA_HEADER_UNICO.md  GUIA_IMPLEMENTACAO_DETALHES.md  HEADER_DOURADO_TRANSPARENTE.md  PADRAO_DETALHES_SISTEMA.md  PADRAO_OFICIAL_SISTEMA_UNIFICADO.md  PROBLEMA_CSS_SOBREPONDO_CORRIGIDO.md  README_FILTROS.md  RESUMO_SCRIPTS_FILTROS.md  SISTEMA_BOTOES_UNIFICADO.md  SISTEMA_FILTROS_MIGRACAO_COMPLETA.md  SISTEMA_LISTAS_UNIFICADO.md  SISTEMA_PADRAO.md  SISTEMA_PADRAO_ESTILO_RH.md  SISTEMA_UNIFICADO_FILTROS.md  TRABALHO_RESTANTE_CONCLUIDO.md  VERIFICACAO_CODIGO.md  VERIFICACAO_CODIGO_HEADERS.md  VERIFICACAO_FINAL_CODIGO_HEADERS.md  VERIFICACAO_FINAL_EXTRA_DEFINITIVA.md  __init__.py  backup_database.bat  botoes_sobreposicao_log.txt  botoes_verificacao_log.txt  button_migration_log.txt  cleanup_headers.py  contadores_verificacao_log.txt  correcoes_log.txt  corrigir_nomes_codificados.py  corrigir_redundancias.py  corrigir_sintaxe_javascript.py  corrigir_templates_django.py  demo_filtros.py  estrutura_unificada_verificacao_log.txt  (+35 more)
backups_botoes/: base_list.html
backups_botoes_sobreposicao/: base_list.html  dashboard.html
backups_contadores/: base_list.html  dashboard.html
backups_correcoes/: dashboard.html
backups_redundancias/: base_detail.html  dashboard.html
backups_submodulos_acesso/: base_admin.html  base_list.html  dashboard.html
meuprojeto/: dashboard.py  demo.py  settings.py  (+1 more)
(+1666 files in other folders)
